adding docker integration

--- a/pom.xml
+++ b/pom.xml
@@ -621,5 +621,45 @@ under the License.
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>docker</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>dockerfile-maven-plugin</artifactId>
+            <version>1.4.13</version>
+            <executions>
+                <execution>
+                    <id>default</id>
+                    <goals>
+                        <goal>build</goal>
+                        <goal>push</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>tag-latest</id>
+                    <goals>
+                        <goal>build</goal>
+                        <goal>push</goal>
+                    </goals>
+                    <configuration>
+                        <tag>latest</tag>
+                    </configuration>
+                </execution>
+            </executions>
+            <configuration>
+              <username>${env.DOCKER_USERNAME}</username>
+              <password>${env.DOCKER_PASSWORD}</password>
+              <repository>registry.hub.docker.com/${env.DOCKER_USERNAME}/${project.artifactId}</repository>
+              <buildArgs>
+                <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+              </buildArgs>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
