--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,6 @@ jobs:
       if: github.ref == 'refs/heads/dev'
       run: mvn install -Psonar
     - name: Build + Test + Sonar + Maven Deploy
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/master' && !contains(github.event.head_commit.message,'[maven-release-plugin]')
       run: mvn deploy -Psonar
   
