--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@ under the License.
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.finos</groupId>
   <artifactId>finos</artifactId>
-  <version>3-SNAPSHOT</version>
+  <version>3</version>
   <packaging>pom</packaging>
 
   <name>The FINOS Parent POM</name>
@@ -71,7 +71,7 @@ under the License.
     <connection>scm:git:git://github.com/finos-fdx/finos-parent-pom.git</connection>
     <developerConnection>scm:git:git@github.com:finos-fdx/finos-parent-pom.git</developerConnection>
     <url>https://github.com/finos-fdx/finos-parent-pom</url>
-    <tag>HEAD</tag>
+    <tag>finos-3</tag>
   </scm>
 
   <pluginRepositories>
