--- a/pom.xml
+++ b/pom.xml
@@ -470,6 +470,29 @@ under the License.
     </profile>
 
     <profile>
+      <id>sigstore-release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>dev.sigstore.maven.plugins</groupId>
+            <artifactId>sigstore-maven-plugin</artifactId>
+            <version>0.0.17</version>
+            <executions>
+              <execution>
+                <phase>install</phase>
+                <configuration>
+                  <mavenPgpSignatures>true</mavenPgpSignatures>
+                </configuration>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>release</id>
       <build>
         <plugins>
