--- a/pom.xml
+++ b/pom.xml
@@ -100,9 +100,9 @@ under the License.
   </distributionManagement>
 
   <issueManagement>
-		<url>https://github.com/finos-fdx/finos-parent-pom/issues</url>
-		<system>GitHub Issues</system>
-	</issueManagement>
+    <url>https://github.com/finos-fdx/finos-parent-pom/issues</url>
+    <system>GitHub Issues</system>
+  </issueManagement>
 
   <properties>
     <repoServerHost>s01.oss.sonatype.org</repoServerHost>
@@ -148,7 +148,7 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>3.2.0</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -243,7 +243,7 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.1</version>
+          <version>3.3.0</version>
           <configuration>
             <archive>
               <manifest>
@@ -266,7 +266,7 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-plugin-plugin</artifactId>
-          <version>3.4</version>
+          <version>3.6.4</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -276,7 +276,7 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.5.3</version>
+          <version>3.0.0-M6</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <useReleaseProfile>false</useReleaseProfile>
