--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,11 +41,11 @@ jobs:
     - name: Download deps and plugins
       run: mvn de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
     - name: Build + Test
-      if: github.ref != 'refs/heads/dev' && github.ref != 'refs/heads/master'
+      if: github.ref != 'refs/heads/dev' && github.ref != 'refs/heads/main'
       run: mvn install
     - name: Build + Test + Sonar
       if: github.ref == 'refs/heads/dev'
       run: mvn install -Psonar
     - name: Build + Test + Sonar + Maven Deploy
-      if: github.ref == 'refs/heads/master' && !contains(github.event.head_commit.message,'[maven-release-plugin]')
+      if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message,'[maven-release-plugin]')
       run: mvn deploy -Psonar -DrepoServerHost=oss.sonatype.org
