--- a/pom.xml
+++ b/pom.xml
@@ -419,6 +419,13 @@ under the License.
     </profile>
 
     <profile>
+      <id>parent-pom-release</id>
+      <properties>
+        <repoServerHost>oss.sonatype.org</repoServerHost>
+      </properties>
+    </profile>
+
+    <profile>
       <id>release</id>
       <build>
         <plugins>
