--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,15 @@ jobs:
       uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
     - name: Install Node
       uses: actions/setup-node@v3
+
+    - name: Cache Maven dependencies
+      uses: actions/cache@v4
+      env:
+        cache-name: cache-mvn-deps
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('pom.xml') }}
+
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
