--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,9 @@ jobs:
       run: mvn deploy -Psonar -DrepoServerHost=oss.sonatype.org
 
     - name: Prepare release
+      if: github.ref == 'refs/heads/main'
       run: mvn -B -DpreparationGoals=clean release:prepare -Prelease -DinteractiveMode=false
 
     - name: Perform release
+      if: github.ref == 'refs/heads/main'
       run: mvn -B release:perform -Prelease -DinteractiveMode=false
