--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,9 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
-    - name: Install Node
-      uses: actions/setup-node@v3
+    # Not sure why this is here
+    # - name: Install Node
+    #   uses: actions/setup-node@v3
 
     - name: Cache Maven dependencies
       uses: actions/cache@v4
