update sonar plugin config

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
       run: mvn install -Psonar
     - name: Build + Test + Sonar + Maven Deploy
       if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message,'[maven-release-plugin]')
-      run: mvn deploy -Psonar -DrepoServerHost=oss.sonatype.org
+      run: mvn deploy -Psonar -Dsonar.projectKey=finos_finos-parent-pom
 
     - name: Prepare release
       if: github.ref == 'refs/heads/main'
