--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@ under the License.
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.finos</groupId>
   <artifactId>finos</artifactId>
-  <version>7</version>
+  <version>8-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>The FINOS Parent POM</name>
@@ -61,7 +61,7 @@ under the License.
     <connection>scm:git:https://github.com/finos/finos-parent-pom.git</connection>
     <developerConnection>scm:git:https://github.com/finos/finos-parent-pom.git</developerConnection>
     <url>https://github.com/finos/finos-parent-pom</url>
-    <tag>finos-7</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
