--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@ under the License.
   <packaging>pom</packaging>
 
   <name>The FINOS Parent POM</name>
-  <description>Parent POM for FINOS hosted project that deliver release, deployment automation and more</description>
+  <description>Parent POM for FINOS hosted project that deliver release, publishing automation and more</description>
   <url>https://github.com/finos/finos-parent-pom</url>
   <organization>
     <name>FINOS</name>
@@ -147,14 +147,6 @@ under the License.
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>3.8.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.4</version>
-          <configuration>
-            <updateReleaseInfo>true</updateReleaseInfo>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -463,7 +455,7 @@ under the License.
     						<goals>
     							<goal>site</goal>
     						</goals>
-    						<phase>deploy</phase>
+    						<phase>install</phase>
     					</execution>
     				</executions>
     			</plugin>
