--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,10 +62,9 @@ jobs:
       if: github.ref == 'refs/heads/dev'
       run: mvn install -Psonar
 
-    # TOD - Not sure how to deploy snapshots after switching to central-publishing-maven-plugin
-    # - name: Build + Test + Sonar + Maven Deploy
-    #   if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message,'[maven-release-plugin]')
-    #   run: mvn deploy -Psonar -Dsonar.projectKey=finos_finos-parent-pom
+    - name: Build + Test + Sonar + Maven Deploy
+      if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message,'[maven-release-plugin]')
+      run: mvn install org.sonatype.central:central-publishing-maven-plugin:0.7.0:publish -Psonar -Dsonar.projectKey=finos_finos-parent-pom
 
     - name: Prepare release
       if: github.ref == 'refs/heads/main'
