--- a/pom.xml
+++ b/pom.xml
@@ -271,13 +271,6 @@ under the License.
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>3.3.1</version>
-          <executions>
-            <execution>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -328,6 +321,16 @@ under the License.
             <goals>
               <goal>enforce</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>none</phase>
+            <id>attach-sources</id>
           </execution>
         </executions>
       </plugin>
@@ -419,7 +422,7 @@ under the License.
             </configuration>
             <executions>
               <execution>
-                <id>release-attach-sources</id>
+                <id>attach-sources</id>
                 <goals>
                   <goal>jar-no-fork</goal>
                 </goals>
